# Arena-War-Solana

./: .env.example  .gitignore  Anchor.toml  App.tsx  Cargo.toml  LICENSE  README.md  check-authority.mjs  index.css  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.scripts.json  tsconfig.tests.json  vite.config.ts
components/: Footer.tsx  Navbar.tsx  StatsBar.tsx  TournamentCard.tsx
context/: LangContext.tsx  TournamentContext.tsx
data/: tournaments.ts
docs/: FASE_1_MVP_PARAMETROS.md
hooks/: useToast.ts  useTournaments.ts
i18n/: en.ts  es.ts
lib/: anchor.ts
pages/: CreateTournament.tsx  Dashboard.tsx  Home.tsx
programs/arena-war-mundial/: Cargo.toml
programs/arena-war-mundial/src/: lib.rs
programs/arena_war/: Cargo.toml  cargo.toml
programs/src/: lib.rs
scripts/: config.json  fund-wallet.ts  init-partidos.ts  initialize-arena.js  initialize-arena.ts  mint-usdt-devnet.ts
src/: App.tsx  index.css  main.tsx
src/components/: ActivityFeed.tsx  ConfettiEffect.tsx  Footer.tsx  GeminiBackground.tsx  Navbar.tsx  RecentWinners.tsx  TournamentCard.tsx
src/context/: LangContext.tsx  TournamentContext.tsx
src/data/: mundial2026.ts  tournaments.ts
src/hooks/: useAnchorProgram.ts  useMundialBets.ts  useSolPrice.ts  useTournaments.ts  useUserProfile.ts
src/i18n/: en.ts  es.ts
src/idl/: arena_war_mundial.json
src/lib/: activity-helpers.ts  anchor.ts  arena_war.json  mundialContract.ts
src/pages/: AdminPanel.tsx  CreateTournament.tsx  Dashboard.tsx  Home.tsx
src/scripts/: initialize.mjs  (+1 more)
tests/: arena-war-mundial.ts
(+5 files in other folders)
