[package]
name = "arena-war-mundial"
version = "0.1.0"
description = "Arena War Mundial 2026 - Parimutuel Betting on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "arena_war_mundial"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.31.1", features = ["token"] }
